opam-version: "2.0"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-xen"
bug-reports:  "https://github.com/mirage/mirage-xen/issues/"
dev-repo:     "git+https://github.com/mirage/mirage-xen.git"
doc:          "https://mirage.github.io/mirage-xen/"
license:      "ISC"
tags:         ["org:mirage"]

build: [
  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "dune" "subst" ] {pinned}
  [ "env" "OPAM_PKG_CONFIG_PATH=%{prefix}%/lib/pkgconfig" "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune"
  "cstruct" {>= "1.0.1"}
  "lwt" {>= "2.4.3"}
  "shared-memory-ring-lwt"
  "xenstore" {>= "1.2.5"}
  "conf-pkg-config"
  "lwt-dllist"
  "mirage-profile" {>= "0.3"}
  "io-page" {>= "2.0.0"}
  "mirage-runtime" {>= "3.7.0"}
  "logs"
  "fmt"
  "ocaml-freestanding" {>= "0.6.2"}
  "solo5-bindings-xen" {>= "0.6.7"}
  "bheap" {>= "2.0.0"}
  "duration"
]
conflicts: [
  "dune" {= "1.9.1"}
  "mirage-xen-minios"
  "mirage-xen-ocaml"
  "mirage-xen-posix"
  "minios-xen"
]
available: [
  (arch = "x86_64" ) &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Xen core platform libraries for MirageOS"
description: """
This package provides the MirageOS `OS` library for
Xen targets, which handles the main loop and timers.  It also provides
the low level C startup code and C stubs required by the OCaml code.
"""
