opam-version: "2.0"
maintainer:   "anil@recoil.org"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage-xen"
bug-reports:  "https://github.com/mirage/mirage-xen/issues/"
dev-repo:     "git+https://github.com/mirage/mirage-xen.git"
doc:          "https://mirage.github.io/mirage-xen/"
license:      "ISC"
tags:         ["org:mirage"]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7.0"}
  "cstruct" {>= "1.0.1"}
  "lwt" {>= "2.4.3"}
  "shared-memory-ring-lwt"
  "xenstore" {>= "1.2.5"}
  "lwt-dllist"
  "io-page" {>= "2.4.0"}
  "mirage-runtime" {>= "4.0"}
  "logs"
  "fmt" {>= "0.8.5"}
  "bheap" {>= "2.0.0"}
  "duration"
  "metrics"
  "metrics-lwt" {>= "0.2.0"}
]
available: [
  (arch = "x86_64" ) &
  (os = "linux" | os = "freebsd" | os = "openbsd")
]
synopsis: "Xen core platform libraries for MirageOS"
description: """
This package provides the MirageOS `OS` library for
Xen targets, which handles the main loop and timers.  It also provides
the low level C startup code and C stubs required by the OCaml code.
"""
x-maintenance-intent: [ "(latest)" ]
