(library
 (name oS)
 (public_name mirage-xen)
 (libraries
  lwt
  cstruct
  xenstore.client
  shared-memory-ring-lwt
  lwt-dllist
  mirage-profile
  logs
  io-page
  fmt
  mirage-runtime
  bheap
  duration)
 (no_dynlink)
 (foreign_archives mirage-xen_bindings))

(rule
 (target libmirage-xen_bindings.a)
 (deps
  (:dep libmirage-xen_bindings.%{context_name}.a))
 (action (copy %{dep} %{target})))

(rule
 (enabled_if (= %{context_name} freestanding))
 (target libmirage-xen_bindings.freestanding.a)
 (action (copy bindings/libmirage-xen_bindings.a %{target})))

(rule
 (target libmirage-xen_bindings.default.a)
 (action (copy stub/libmirage-xen_bindings.a %{target})))

(include_subdirs unqualified)
