(library
 (name xen_os)
 (public_name mirage-xen)
 (libraries lwt cstruct xenstore.client shared-memory-ring-lwt lwt-dllist
   logs io-page fmt mirage-runtime bheap duration metrics metrics-lwt)
 (no_dynlink)
 (foreign_archives mirage-xen_bindings))

(rule
 (target libmirage-xen_bindings.a)
 (deps
  (:dep libmirage-xen_bindings.%{context_name}.a))
 (action
  (copy %{dep} %{target})))

(rule
 (enabled_if
  (= %{context_name} solo5))
 (target libmirage-xen_bindings.solo5.a)
 (action
  (copy bindings/libmirage-xen_bindings.a %{target})))

(rule
 (target libmirage-xen_bindings.default.a)
 (action
  (copy stub/libmirage-xen_bindings.a %{target})))

(include_subdirs unqualified)
