(executable
 (enabled_if
  (= %{context_name} solo5))
 (name main)
 (link_flags -cclib "-z solo5-abi=xen")
 (libraries mirage-xen)
 (foreign_stubs
  (language c)
  (names manifest)))

(rule
 (targets manifest.c)
 (enabled_if
  (= %{context_name} solo5))
 (deps manifest.json)
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))

(rule
 (alias runtest)
 (deps main.exe)
 (enabled_if
  (= %{context_name} solo5))
 (action
  (run echo OK)))
